# skp

./: LICENSE  package-lock.json
skp-be/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  filelist.txt  fly.toml  init_db.sql  local.db  main.py  pyproject.toml
skp-be/app/: config.py  deps.py  main.py  security.py
skp-be/app/db/: __init__.py  connection.py
skp-be/app/models/: __init__.py  connection.py  location.py  notification.py  routine.py  user.py
skp-be/app/repositories/: push.py
skp-be/app/routers/: auth.py  connect.py  location.py  nudge.py  people.py  routine.py  routines.py  scheduler.py
skp-be/app/scheduler/: routine.py
skp-be/app/schemas/: __init__.py  auth.py  connect.py  location.py  notification.py  people.py  routine.py  scheduler.py
skp-be/app/scripts/: init_db.sql
skp-be/app/utility/: push.py  schedule_generator.py
skp-be/migrations/: env.py
skp-be/migrations/versions/: 246693b3e8b1_add_routine_and_people.py  fef7b3b2d7db_initial_schema.py
skp-be/scripts/: seed.py
skp-fe/: .env.example  .gitignore  app.json  eas.json  package-lock.json  package-lock2.json  package.json  tailwind.config.js
skp-fe/skp-fe/: app.json  pnpm-lock.yaml
skp-fe/src/app/: _layout.tsx  index.tsx
skp-fe/src/config/: mapbox.tsx
skp-fe/src/constants/: api-constants.ts  dummy.tsx  routine.tsx  user.tsx
skp-fe/src/lib/: api-client.ts  geofence-task.ts  notification.ts  permission.ts  query-client.ts  token-storage.ts
skp-fe/src/services/: auth-api.tsx  connect-api.tsx  location-api.tsx  mapbox-api.tsx  routine-api.tsx  (+2 more)
(+36 files in other folders)
