[project]
name = "skp-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "bcrypt>=5.0.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
